<resources>
    <string name="app_name">返品チェック</string>
    <string name="userid">ユーザID</string>
    <string name="password">パスワード</string>
    <string name="webpos">WEBPOS</string>
    <string name="smart_active">SMART ACTIVE</string>
    <string name="login">ログイン</string>
    <string name="logout">ログアウト</string>
    <string name="setting">ログアウト</string>
    <string name="unlock">ロック解除</string>
    <string name="cancel_button">取消</string>
    <string name="title">表示案件を変更します</string>
    <string name="titleyear">発売日	指定</string>
    <string name="location">ロケーション別</string>
    <string name="classify">分類別</string>
    <string name="publish">出版社別</string>
    <string name="back">戻る</string>
    <string name="yearnull">発売日NULL</string>
    <string name="year1over">１年以上前</string>
    <string name="year2over">２年以上前</string>
    <string name="year3over">３年以上前</string>
    <string name="year4over">４年以上前</string>
    <string name="year5over">５年以上前</string>
    <string name="reaturn_candidate">返品候補</string>
    <string name="number_sample">抜取数</string>
    <string name="number_candidates">候補数</string>
    <string name="inlist">リスト内</string>
    <string name="outlist">リスト外</string>
    <string name="ISBN">ISBN</string>
    <string name="check">チェック</string>
    <string name="name">書名</string>
    <string name="location_name">ロケーションCD: </string>
    <string name="finalpurchasedate">最終仕入: </string>
    <string name="finalsaledate">最終売上: </string>
    <string name="sale_number">売上数: </string>
    <string name="inventory_number">在庫数: </string>
    <string name="national_sale_number">全国売上数累計: </string>
    <string name="logout_msg">ログアウトを行います。\nよろしいですか？</string>
    <string name="cancel_msg">スキャンした商品の\n取消を行います。\nよろしいですか？</string>
    <string name="logout_yes">はい</string>
    <string name="logout_no">いいえ</string>
    <string name="retry">リトライ</string>
    <string name="cancel">キャンセル</string>


    <string name="scanner_fragment_activity">ZBar Barcode Scanner</string>
    <string name="fragment_barcode">Barcode Scan</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="hello_world">Hello World</string>

    <integer name="viewfinder_border_width">4</integer>
    <integer name="viewfinder_border_length">60</integer>

    <string name="select_all_year">すべて</string>
    <string name="select_1_year_ago">発売日1年前</string>
    <string name="select_2_year_ago">発売日2年前</string>
    <string name="select_3_year_ago">発売日3年前</string>
    <string name="select_4_year_ago">発売日4年前</string>
    <string name="select_5_year_ago">発売日5年前</string>
    <string name="select_null">発売日NULL</string>

    <!--https://vjppd.backlog.jp/view/SAVN-29           START                     -->
    <string name="filter_release_date">発売日</string>
    <string name="filter_condition_change">条件変更</string>
    <string name="filter_year1_unchanged">1年未動</string>
    <string name="filter_nationwide">全国下位</string>
    <string name="filter_nationwide_10">10%</string>
    <string name="filter_nationwide_20">20%</string>
    <string name="filter_nationwide_30">30%</string>
    <!--https://vjppd.backlog.jp/view/SAVN-29           END                     -->

    <string name="select_cagtagory">分類別</string>
    <string name="rank_arrival">入荷</string>

    <string name="jan_cd">JAN</string>
    <string name="product_name">品名</string>
    <string name="group1_name">大分類</string>
    <string name="group2_name">中分類</string>
    <string name="writer_name">著者</string>
    <string name="publisher_name">出版社</string>
    <string name="publish_date">発売日</string>
    <string name="price">価格</string>
    <string name="first_supply_date">初回入荷日</string>
    <string name="last_supply_date">最終入荷日</string>
    <string name="last_sales_date">最終売上日</string>
    <string name="last_order_date">最終発注日</string>
    <string name="supply_terms_cd">常備奇託</string>
    <string name="default_percent">30%</string>
    <string name="inventory_number_2">在庫数</string>
    <string name="year_rank">売上順位</string>
    <string name="joubi">対象外</string>
    <string name="trn_date">更新日</string>
    <string name="total_sales">累計売上数</string>
    <string name="total_supply">累計仕入数</string>
    <string name="total_return">累計返品数</string>
    <string name="location_id">ロケーション</string>

    <string name="select_all">すべて</string>
    <string name="return_candidate_setting">返品候補設定</string>
    <string name="button_decision">決定</string>
    <string name="button_classification">分類</string>
    <string name="button_publisher">出版社</string>
    <string name="button_release_date">発売日</string>
    <string name="button_undisturbed">未動期間</string>
    <string name="button_number_of_stocks">在庫数</string>
    <string name="button_stock_percent">在庫％</string>
    <string name="button_not_covered">対象外</string>yyyy
    <string name="button_number_of_candidates">候補数</string>
    <string name="button_number_of_books">冊数</string>
    <string name="yes_standing">常備</string>
    <string name="no_standing">なし</string>
</resources>
