<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:orientation="vertical">

    <com.honeywell.barcode.HSMDecodeComponent
        android:id="@+id/hsm_decodeComponent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:addStatesFromChildren="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

    </com.honeywell.barcode.HSMDecodeComponent>

    <LinearLayout
        android:id="@+id/llTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorGreyDark"
        android:gravity="fill_vertical|start"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        app:layout_constraintBottom_toTopOf="@+id/header_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txv_user_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/size5dp"
            android:layout_marginStart="@dimen/size5dp"
            android:layout_weight="0.96"
            android:gravity="center_vertical"
            android:text="@string/hello_world"
            android:textColor="@color/colorWhite"/>

        <Switch
            android:id="@+id/switch_OCR"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.08"
            android:gravity="center_vertical"
            android:text="OCR"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorButton"
            android:text="@string/logout"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/size5dp"
            android:layout_marginStart="@dimen/size5dp"
            android:background="@color/colorButton"
            android:text="@string/cancel_button"
            android:textColor="@color/colorWhite" />

        <ImageButton
            android:id="@+id/imb_filter"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/size5dp"
            android:layout_marginLeft="@dimen/size5dp"
            android:layout_marginRight="@dimen/size5dp"
            android:layout_marginStart="@dimen/size5dp"
            android:background="@color/colorButton"
            android:scaleType="centerCrop"
            android:src="@drawable/setting"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="383dp"
        android:layout_height="27dp"
        android:background="@color/colorGreyDark"
        android:paddingBottom="@dimen/size5dp"
        android:paddingTop="@dimen/size5dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_end"
        app:layout_constraintTop_toTopOf="@+id/bottom_start"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ISBN"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

    <ListView
        android:id="@+id/list_book"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llBottom"
        tools:layout_editor_absoluteX="8dp"/>

    <android.support.constraint.Guideline
        android:id="@+id/bottom_start"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark"
        android:foreground="@android:color/holo_orange_dark"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="284dp"/>

    <android.support.constraint.Guideline
        android:id="@+id/bottom_end"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="312dp"/>

    <android.support.constraint.Guideline
        android:id="@+id/header_end"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="46dp"/>

</android.support.constraint.ConstraintLayout>